# cache

./: CMakeLists.txt  Makefile  readme.md
.github/workflows/: ci.yaml
build_lfu/: CMakeCache.txt  Makefile  cmake_install.cmake  lfu_cache
build_lfu/tests/: CTestTestfile.cmake  Makefile  cache_tests  cmake_install.cmake
build_pc/: CMakeCache.txt  Makefile  cmake_install.cmake  pc_cache
build_pc/tests/: Makefile  cache_tests  cmake_install.cmake
include/: api.hpp  cache.h  lfu_cache.hpp  pcache.hpp
lfu_cache/: CMakeLists.txt  main.cpp
lfu_cache/include/: lfu_cache.hpp
lfu_cache/tests/: CMakeLists.txt  tests.cpp
logs/: pc_log.txt
perfect_cache/: CMakeLists.txt  main.cpp
perfect_cache/include/: perfect_cache.hpp
perfect_cache/log/: pc_log.txt
perfect_cache/tests/: CMakeLists.txt  tests.cpp
src/: api.cpp  cache.cc  error.cc  lfu_cache.cpp  main.cc  pcache.cpp
tests/: CMakeLists.txt  lfuc_tests.cpp  pc_tests.cpp
